--- a/app/src/main/res/layout/activity_expense_list.xml
+++ b/app/src/main/res/layout/activity_expense_list.xml
@@ -14,7 +14,9 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/expenseRecyclerView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:clipToPadding="false"
+            android:padding="4dp"/>
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
