Continued Update - Added Info Button in nav Bar - Added cleaner charts - Fixed bug issues with displaying all expenses in List - Fixed scroll issue in Charts

--- a/app/src/main/res/menu/menu_dashboard.xml
+++ b/app/src/main/res/menu/menu_dashboard.xml
@@ -3,6 +3,16 @@
 
     <item
         android:id="@+id/action_view_expenses"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:icon="@android:drawable/ic_menu_recent_history"
         android:title="View Expenses"
-        app:showAsAction="always"/>
+        app:showAsAction="always" />
+    <item
+        android:id="@+id/action_view_info"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:icon="@android:drawable/ic_menu_info_details"
+        android:title="App Info"
+        app:showAsAction="always" />
 </menu>
