--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="light_grey">#B1B1B1</color>
+    <color name="light_grey">#E2E2E2</color>
 
     <!-- Define colors for chart sections -->
     <!-- Define colors for chart sections -->
@@ -17,6 +17,7 @@
     <color name="foodColor">#FFB347</color>
     <color name="utilitiesColor">#9370DB</color>
     <color name="healthColor">#FF6347</color>
-    <color name="otherColor">#A9A9A9</color>
+    <color name="travelColor">#40E0D0</color>
+    <color name="shoppingColor">#FFD700</color>
 
 </resources>
