--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -33,6 +33,15 @@
 
         <!-- Progress Bar Title -->
         <TextView
+            android:id="@+id/progressBarTitle2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="2dp"
+            android:text="This Months"
+            android:textSize="14sp"
+            android:textStyle="normal" />
+
+        <TextView
             android:id="@+id/progressBarTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -42,6 +51,7 @@
             android:layout_marginBottom="8dp" />
 
         <!-- Progress Bar -->
+
         <ProgressBar
             android:id="@+id/budgetProgressBar"
             style="?android:attr/progressBarStyleHorizontal"
